--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,59 @@ img{
     text-decoration: none;
     color: inherit;
 }
+/* backdrop */
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    
+    width: 100%;
+    height: 100%;
+   
+    background-color:rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hiddden{
+    opacity: 0;
+    pointer-events: none;
+}
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+   
+    min-width: 528px;
+    min-height: 581px;
+    
+    background-color:var(--button-text-color);
+}
+.modal-button{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    padding: 0;
+    border: none;
+    margin-left: auto;
+    margin-right: 8px;
+    margin-top: 8px;
+    color:black;
+    background-color: #FFFFFF;
+    
+}
+.modal-button:hover{
+    background-color: #2196F3;
+    color: #ffffff;
+}
+.modal-icon{
+    display: block;
+    
+    fill: currentColor;
+}
 /* h1{
     
 
