--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,10 @@ p{
      line-height: 1.14;
      text-decoration: none;
      letter-spacing: .02em;
+
+     transition-property: color;
+     transition-duration: 250ms;
+     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
      
  }
  .link:hover,
@@ -207,9 +211,6 @@ p{
  }
  .address-nav .link{
 
-     /* padding-top: 32px;
-     padding-bottom: 32px; */
-
      color: var(--paragraph-text-color); 
      
      list-style: none;
@@ -220,6 +221,11 @@ p{
      font-style: normal;
      text-decoration: none;
      letter-spacing: .02em;
+
+     transition-property: color;
+     transition-duration: 250ms;
+     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+     
  }
  .address-nav .link:hover,
  .address-nav .link:focus{
@@ -486,7 +492,11 @@ p{
     border-radius: 50%;
     background-color: var(--button-text-color);
     text-decoration: none;
-    border:none
+    border:none;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link-team:hover,
 .link-team:focus{
@@ -498,6 +508,12 @@ p{
     
     display: block;
     fill:#AFB1B8;
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    
 }
 .link-team:hover .icon,
 .link-team:focus .icon{
@@ -591,6 +607,10 @@ p{
     height: 92px;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
+
+    transition-property: border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-clients-link:hover,
 .our-clients-link:focus{
@@ -605,6 +625,10 @@ p{
     width: 106px;
     height: 60px;
     fill: var(--color-icon);
+
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -710,6 +734,10 @@ p{
     justify-content: center;
     align-items: center;
 
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .footer-link-team:hover,
@@ -737,6 +765,12 @@ p{
     width: 370px;
     margin-bottom: 30px;
     margin-right: 30px;
+    transition-property: box-shadow; 
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1); 
+
+    
+    
     
 }
 .work-list .item:hover{
@@ -759,9 +793,10 @@ p{
 }
 .work-list-thumb{
     position: relative;
+    overflow: hidden;
 }
 
-.work-list .item:hover .work-list-thumb::before{
+.work-list .item .work-list-thumb::before{
     position: absolute;
     content:'';
 
@@ -770,12 +805,22 @@ p{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: rgba(33, 150, 243, 0.9);
     opacity: 1;
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 2500ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.work-list .item:hover .work-list-thumb::before{
+     transform: translateY(0%);
 
 }
 
 
-.work-list .item:hover:hover .work-thumb-text{
-    opacity: 1;
+.work-list .item:hover .work-thumb-text{
+    
+    transform: translateY(0%);
+    
     
 }
 .work-list-thumb .work-thumb-text{
@@ -794,8 +839,14 @@ p{
     text-align: start;
     color:var(--button-text-color);
 
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 2500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
 
-    opacity: 0;
+
+    
 }
 
  
