--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,11 @@ img{
    
     background-color:rgba(0, 0, 0, 0.2);
 }
-.backdrop.is-hiddden{
+.backdrop.is-hidden{
+
     opacity: 0;
     pointer-events: none;
+   
 }
 .modal{
     position: absolute;
@@ -169,6 +171,7 @@ p{
      display: block;
      padding-top: 32px;
      padding-bottom: 32px; 
+     position: relative;
      
      color: var( --title-text-color);
      
@@ -190,6 +193,19 @@ p{
  }
  .site-nav .link.current{
      color:var(--accent-color);
+ }
+ .site-nav .link.current::after{
+     content: "";
+     position: absolute;
+     left:0;
+     bottom: 0;
+
+     display: block;
+     width: 100%;
+     height: 4px;
+     border-radius: 4px;
+     background-color: var(--accent-color);
+
  }
  /* address nav */
  .main-address{
@@ -807,7 +823,7 @@ p{
     opacity: 1;
     transform: translateY(100%);
     transition-property: transform;
-    transition-duration: 2500ms;
+    transition-duration: 250ms;
     transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -841,7 +857,7 @@ p{
 
     transform: translateY(100%);
     transition-property: transform;
-    transition-duration: 2500ms;
+    transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 
