--- a/css/styles.css
+++ b/css/styles.css
@@ -55,11 +55,15 @@ img{
     height: 100%;
    
     background-color:rgba(0, 0, 0, 0.2);
+    transition-property: opacity, visibility;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 .backdrop.is-hidden{
 
     opacity: 0;
     pointer-events: none;
+    visibility: hidden;
    
 }
 .modal{
@@ -72,6 +76,8 @@ img{
     min-height: 581px;
     
     background-color:var(--button-text-color);
+    box-shadow:  0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
 }
 .modal-button{
     
@@ -89,6 +95,10 @@ img{
     margin-top: 8px;
     color:black;
     background-color: #FFFFFF;
+
+    transition-property: background-color, color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 .modal-button:hover{
@@ -564,6 +574,10 @@ p{
     line-height: 1.63;
     letter-spacing: .03em;
     cursor: pointer;
+
+    transition-property: color, background-color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.4, 0, 0.2, 1) ;
 }
 .button:hover,
 .button:focus{
@@ -750,7 +764,7 @@ p{
     justify-content: center;
     align-items: center;
 
-    transition-property: color;
+    transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
